--- a/styles/main.css
+++ b/styles/main.css
@@ -138,9 +138,9 @@ body {
   padding: 0.8rem 1.5rem;
   font-size: 1rem;
   font-weight: 600;
-  background-color: #7b001c; /* rouge bordeaux */
+  background-color: #ff4d00; /* rouge bordeaux */
   color: #fff;
-  border: 2px solid #7b001c;
+  border: 2px solid #ff4d00;
   border-radius: 5px;
   text-decoration: none;
   transition: all 0.3s ease-in-out;
@@ -149,7 +149,7 @@ body {
 .hero__btn:hover {
   background-color: transparent;
   color: #fff;
-  border-color: #7b001c;
+  border-color: #ff4d00;
 }
 
 /* section à propos */
@@ -175,7 +175,7 @@ body {
 }
 
 .about-preview__image {
-  width: 70%;
+  width: 65%;
   height: auto;
   border-radius: 12px;
   object-fit: cover;
@@ -188,8 +188,8 @@ body {
 }
 
 .about-preview__title {
-  font-size: 2rem;
-  color: #333;
+  font-size: 2.5rem;
+  color: #800020;
   margin-bottom: 1rem;
 }
 
@@ -204,9 +204,9 @@ body {
   display: inline-block;
   padding: 0.75rem 1.5rem;
   font-weight: 600;
-  background-color: #800020;
+  background-color: #ff4d00;
   color: #fff;
-  border: 2px solid #800020;
+  border: 2px solid #ff4d00;
   border-radius: 6px;
   text-decoration: none;
   transition: all 0.3s ease-in-out;
@@ -214,7 +214,7 @@ body {
 
 .about-preview__link:hover {
   background-color: transparent;
-  color: #800020;
+  color: #ff4d00;
 }
 
 /* la section nos vins  */
@@ -243,7 +243,7 @@ body {
   backdrop-filter: blur(10px);
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 12px;
-  padding: 1.5rem;
+  padding: 1rem;
   max-width: 320px;
   width: 100%;
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
@@ -252,21 +252,22 @@ body {
 
 .wine-card__image {
   width: 100%;
+  height: 350px;
   border-radius: 8px;
-  object-fit: cover;
-  margin-bottom: 1rem;
+  object-fit: ;
+  margin-bottom: 0.8rem;
 }
 
 .wine-card__name {
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   color: #4b1c1c;
-  margin-bottom: 0.5rem;
+  margin-bottom: 0.3rem;
 }
 
 .wine-card__description {
-  font-size: 1rem;
+  font-size: 0.95rem;
   color: #333;
-  margin-bottom: 1.2rem;
+  margin-bottom: 0.8rem;
   line-height: 1.5;
 }
 
@@ -277,7 +278,7 @@ body {
 }
 
 .wine-card__price {
-  font-size: 1.2rem;
+  font-size: 1rem;
   font-weight: bold;
   color: #800020;
 }
@@ -288,7 +289,7 @@ body {
   color: white;
   text-decoration: none;
   border-radius: 6px;
-  transition: background 0.3s ease;
+  transition: 0.3s ease;
 }
 
 .wine-card__btn:hover {
@@ -303,16 +304,18 @@ body {
 .wines-preview__btn {
   display: inline-block;
   padding: 0.8rem 2rem;
-  background-color: #800020;
+  background-color: #ff4d00;
   color: white;
   text-decoration: none;
   border-radius: 8px;
   font-size: 1.1rem;
-  transition: background 0.3s ease;
+  transition: 0.3s ease;
 }
 
 .wines-preview__btn:hover {
-  background-color: #a02828;
+  background: transparent;
+  border: 1px solid #ff4d00;
+  color: #800020;
 }
 
 /* la section gallerie */
@@ -326,7 +329,7 @@ body {
   font-size: 2.5rem;
   text-align: center;
   margin-bottom: 1rem;
-  color: #1a1a1a;
+  color: #800020;
 }
 
 .gallery__description {
@@ -415,10 +418,10 @@ body {
 
 .faq__title {
   text-align: center;
-  font-size: 2.8rem;
+  font-size: 2.5rem;
   margin-bottom: 3rem;
   letter-spacing: 1px;
-  color: #f5f5f5;
+  color: #800020;
   text-transform: uppercase;
 }
 
@@ -510,11 +513,19 @@ body {
   display: block;
 }
 .navbar__toggle i{
-    font-size: 3rem;
+    font-size: 2rem;
 }
 
   .navbar__link {
     font-size: 1.2rem;
+  }
+  .navbar__logo{
+    height: 50px;
+    width: auto;
+    object-fit: contain;
+  }
+  .navbar{
+    padding: 0.5rem 2rem;
   }
 
   /* la section hero */
