--- a/styles/main.css
+++ b/styles/main.css
@@ -582,7 +582,7 @@ body {
 /* la section fait une commande rapide */
 .quick-order {
   text-align: center;
-  background-color: #f2e9e4;
+  background-color: #f8f3f0;
   color: #000;
   padding: 4rem 2rem;
 }
